[project]
name = "Wextracto"
version = "0.16.0"
description = "Web Data Extraction Library Written in Python"
authors = [
    {name = "Giles Brown", email = "gilessbrown@gmail.com"},
    {name = "Giles Brown", email = "gsbrown@ebay.com"},
]
dependencies = [
    "cssselect",
    "lxml>=3",
    "publicsuffix2~=2.0",
    "requests",
    "six",
]
requires-python = ">=3.11"
readme = "README.rst"
license = {text = "BSD"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/gilesbrown/wextracto"

[project.scripts]
wex = "wex.command:main"

[project.entry-points]
[project.entry-points.pytest11]
wex = "wex.pytestplugin"

[project.entry-points."wex.method.ftp"]
get = "wex.ftp:get"

[project.entry-points."wex.method.http"]
form = "wex.form:submit_form"
get = "wex.http:request"
post = "wex.http:request"

[project.entry-points."wex.method.https"]
form = "wex.form:submit_form"
get = "wex.http:request"
post = "wex.http:request"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
